--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,23 @@
 {
   "parser": "babel-eslint",
-  "plugins": ["meteor", "react"],
-  "extends": ["airbnb", "plugin:meteor/recommended", "plugin:react/recommended"],
+  "plugins": [
+    "meteor",
+    "react",
+    "prettier"
+  ],
+  "extends": [
+    "airbnb",
+    "plugin:meteor/recommended",
+    "plugin:react/recommended",
+    "prettier",
+    "prettier/react"
+  ],
   "env": {
-    "es6": true
+    "es6": true,
+    "browser": true,
+    "node": true
   },
   "globals": {
-    "window": true,
-    "document": true,
-    "browser": true,
-    "navigator": true,
     "alert": true
   },
   "parserOptions": {
@@ -58,7 +66,23 @@
     "no-underscore-dangle": [
       "error",
       {
-        "allow": ["_id", "_execute", "_sleepForMs"]
+        "allow": [
+          "_id",
+          "_execute",
+          "_sleepForMs"
+        ]
+      }
+    ],
+    "prettier/prettier": [
+      "error",
+      {
+        "arrowParens": "avoid",
+        "bracketSpacing": true,
+        "printWidth": 90,
+        "singleQuote": false,
+        "tabWidth": 2,
+        "trailingComma": "all",
+        "useTabs": false
       }
     ],
     "react/no-danger": "warn",
@@ -66,9 +90,18 @@
     "react/sort-comp": [
       "warn",
       {
-        "order": ["props", "static-methods", "lifecycle", "everything-else", "render"],
+        "order": [
+          "props",
+          "static-methods",
+          "lifecycle",
+          "everything-else",
+          "render"
+        ],
         "groups": {
-          "props": ["props", "defaultProps"]
+          "props": [
+            "props",
+            "defaultProps"
+          ]
         }
       }
     ],
@@ -81,7 +114,9 @@
     "import/no-unresolved": [
       "error",
       {
-        "ignore": ["^meteor/"]
+        "ignore": [
+          "^meteor/"
+        ]
       }
     ],
     "jsx-a11y/no-static-element-interactions": "warn"
