adding jest and enzyme to project (setup incomplete, packages installed, but get jest error message)

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "fitness-mui",
+  "name": "meteor_react_material",
   "private": true,
   "scripts": {
     "start": "meteor run --settings settings.json",
-    "lint": "eslint . --ext .js,.jsx --ignore-pattern 'packages/**'"
+    "lint": "eslint . --ext .js,.jsx --ignore-pattern 'packages/**'",
+    "test": "npm run unit-test",
+    "unit-test": "jest -c .jest-config.json"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
@@ -15,7 +17,15 @@
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.52",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.2.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
@@ -24,6 +34,9 @@
     "eslint-plugin-meteor": "^5.0.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.10.0",
-    "prettier": "^1.13.7"
+    "jest": "^23.3.0",
+    "prettier": "^1.13.7",
+    "react-test-renderer": "^16.4.1",
+    "regenerator-runtime": "^0.12.0"
   }
 }
