--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "unit-test": "jest -c .jest-config.json"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.36",
     "@material-ui/core": "^1.2.3",
     "@material-ui/icons": "^1.1.0",
     "meteor-node-stubs": "^0.3.2",
@@ -17,13 +16,13 @@
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.52",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^7.0.0-bridge.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-jest": "^23.2.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
