--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
-  "presets": [
-    "env",
-    "react",
-    "stage-0"
-  ]
+  "env": {
+    "test": {
+      "presets": [
+        "env",
+        "react",
+        "stage-0"
+      ]
+    }
+  }
 }
