--- a/package.json
+++ b/package.json
@@ -5,37 +5,38 @@
     "start": "meteor run --settings settings.json",
     "lint": "eslint . --ext .js,.jsx --ignore-pattern 'packages/**'",
     "test": "npm run unit-test",
-    "unit-test": "jest -c .jest-config.json"
+    "unit-test": "jest -c .jest-config.json",
+    "update-snapshots": "jest -c .jest-config.json --updateSnapshot"
   },
   "dependencies": {
-    "@material-ui/core": "^1.2.3",
-    "@material-ui/icons": "^1.1.0",
-    "meteor-node-stubs": "^0.3.2",
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
+    "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-jest": "^23.2.0",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-meteor": "^5.0.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^2.10.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-meteor": "^5.1.0",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
-    "jest": "^23.3.0",
-    "prettier": "^1.13.7",
-    "react-test-renderer": "^16.4.1",
-    "regenerator-runtime": "^0.12.0"
+    "eslint-plugin-react": "^7.11.1",
+    "jest": "^23.6.0",
+    "prettier": "^1.14.3",
+    "react-test-renderer": "^16.5.2",
+    "regenerator-runtime": "^0.12.1"
   }
 }
