clearing an eslint import error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -111,6 +111,12 @@
         "templateInstanceParamName": "instance"
       }
     ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
+      }
+    ],
     "import/no-unresolved": [
       "error",
       {
